--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <title>MesimaDevSense</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link type="text/html" rel="stylesheet" href="normalize.css"/>
+  <link type="text/html" rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>Loading...</app-root>
 </body>
 </html>
