--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link type="text/html" rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Loading....</app-root>
 </body>
 </html>
